--- a/MinRT.NuGet.DefaultALC/MinRT.NuGet.DefaultALC.csproj
+++ b/MinRT.NuGet.DefaultALC/MinRT.NuGet.DefaultALC.csproj
@@ -9,6 +9,13 @@
 
   <ItemGroup>
     <ProjectReference Include="..\MinRT.NuGet\MinRT.NuGet.csproj" />
+    
+    <!-- Compile against Humanizer but DON'T copy it to output -->
+    <PackageReference Include="Humanizer.Core" Version="2.14.1">
+      <ExcludeAssets>runtime</ExcludeAssets>
+    </PackageReference>
+    
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="9.0.7" />
   </ItemGroup>
 
 </Project>
