--- a/src/MinRT.NuGet/MinRT.NuGet.csproj
+++ b/src/MinRT.NuGet/MinRT.NuGet.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="10.0.0-preview.1.25080.5" />
+    <PackageReference Include="NuGet.Commands" Version="6.13.1" />
     <PackageReference Include="NuGet.Protocol" Version="6.13.1" />
     <PackageReference Include="NuGet.Resolver" Version="6.13.1" />
   </ItemGroup>
