--- a/src/MinRT.Core/MinRT.Core.csproj
+++ b/src/MinRT.Core/MinRT.Core.csproj
@@ -6,12 +6,30 @@
     <Nullable>enable</Nullable>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <IsAotCompatible>true</IsAotCompatible>
+    
+    <!-- Default RID for embedded tool (can be overridden) -->
+    <MinrtToolRid Condition="'$(MinrtToolRid)' == ''">win-x64</MinrtToolRid>
+    <MinrtToolPublishDir>$(MSBuildThisFileDirectory)..\..\tools\minrt\bin\$(Configuration)\net10.0\$(MinrtToolRid)\publish\</MinrtToolPublishDir>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="NuGet.Configuration" Version="7.0.1" />
     <PackageReference Include="NuGet.Packaging" Version="7.0.1" />
     <PackageReference Include="NuGet.Versioning" Version="7.0.1" />
+  </ItemGroup>
+
+  <!-- Embed minrt.exe as a resource if it exists (from publish output) -->
+  <ItemGroup Condition="Exists('$(MinrtToolPublishDir)minrt.exe')">
+    <EmbeddedResource Include="$(MinrtToolPublishDir)minrt.exe">
+      <LogicalName>MinRT.Core.minrt.exe</LogicalName>
+    </EmbeddedResource>
+  </ItemGroup>
+
+  <!-- Embed minrt (no extension) for Linux/macOS -->
+  <ItemGroup Condition="Exists('$(MinrtToolPublishDir)minrt') AND !Exists('$(MinrtToolPublishDir)minrt.exe')">
+    <EmbeddedResource Include="$(MinrtToolPublishDir)minrt">
+      <LogicalName>MinRT.Core.minrt</LogicalName>
+    </EmbeddedResource>
   </ItemGroup>
 
 </Project>
