--- a/tools/minrt/minrt.csproj
+++ b/tools/minrt/minrt.csproj
@@ -5,7 +5,11 @@
     <TargetFramework>net10.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <AssemblyName>minrt-nuget</AssemblyName>
+    <AssemblyName>minrt</AssemblyName>
+    
+    <!-- Single file but framework-dependent (much smaller) -->
+    <PublishSingleFile>true</PublishSingleFile>
+    <SelfContained>false</SelfContained>
   </PropertyGroup>
 
   <ItemGroup>
